- Working on Azure Storage integration - Renamed a number of classes to be more generalized