@@ -1,14 +1,18 @@
 package io.cresco.cpms.storage;
 
 import ch.qos.logback.classic.Level;
-import com.google.gson.Gson;
 import io.cresco.cpms.logging.BasicCPMSLoggerBuilder;
 import io.cresco.cpms.logging.CPMSLogger;
+import io.cresco.cpms.processing.ExecutionException;
 import io.cresco.cpms.processing.StorageEngine;
+import io.cresco.cpms.processing.StorageTaskResult;
 import io.cresco.cpms.scripting.ScriptException;
 import io.cresco.cpms.scripting.StorageTask;
 import io.cresco.cpms.storage.encapsulation.Archiver;
-import io.cresco.cpms.storage.transfer.ObjectStorageV2;
+import io.cresco.cpms.storage.transfer.AzureBlobStorage;
+import io.cresco.cpms.storage.transfer.AzureBlobStorageBuilder;
+import io.cresco.cpms.storage.transfer.S3ObjectStorage;
+import io.cresco.cpms.storage.transfer.S3ObjectStorageBuilder;
 import net.sourceforge.argparse4j.ArgumentParsers;
 import net.sourceforge.argparse4j.impl.Arguments;
 import net.sourceforge.argparse4j.inf.ArgumentParser;
@@ -22,8 +26,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.File;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -32,14 +34,11 @@ public class App {
     private static final CPMSLogger logger = new BasicCPMSLoggerBuilder().withClass(App.class).build();
     private static final Logger simpleLogger = LoggerFactory.getLogger("message-only");
 
-    public static void main(String[] args) {
+    static void main(String[] args) {
         ArgumentParser parser = ArgumentParsers.newFor("Cresco Pipeline Management System - Storage").build()
                 .defaultHelp(true)
-                .description("Interacts with storage");
+                .description("Command line storage management utility");
         parser.addArgument("-v", "--verbose").action(Arguments.storeTrue());
-        parser.addArgument("-C", "--credentials")
-                .setDefault("config.properties")
-                .help("Configuration file holding credential information.");
         parser.addArgument("command").nargs("?");
         parser.addArgument("parameters").nargs("*");
         Namespace ns = null;
@@ -51,9 +50,7 @@ public class App {
         }
 
         Boolean verbose = ns.getBoolean("verbose");
-        String command = ns.getString("command"),
-                credentials = ns.getString("credentials")
-                        ;
+        String command = ns.getString("command");
         List<String> parameters = ns.getList("parameters");
 
         if (verbose) {
@@ -61,12 +58,18 @@ public class App {
             meLogger.setLevel(Level.toLevel("TRACE"));
             final ch.qos.logback.classic.Logger appLogger = (ch.qos.logback.classic.Logger) LoggerFactory.getLogger(App.class);
             appLogger.setLevel(Level.toLevel("TRACE"));
-            final ch.qos.logback.classic.Logger osLogger = (ch.qos.logback.classic.Logger) LoggerFactory.getLogger(ObjectStorageV2.class);
-            osLogger.setLevel(Level.toLevel("TRACE"));
-            final ch.qos.logback.classic.Logger arcLogger = (ch.qos.logback.classic.Logger) LoggerFactory.getLogger(Archiver.class);
-            arcLogger.setLevel(Level.toLevel("TRACE"));
             final ch.qos.logback.classic.Logger seLogger = (ch.qos.logback.classic.Logger) LoggerFactory.getLogger(StorageEngine.class);
             seLogger.setLevel(Level.toLevel("TRACE"));
+            final ch.qos.logback.classic.Logger arcLogger = (ch.qos.logback.classic.Logger) LoggerFactory.getLogger(Archiver.class);
+            arcLogger.setLevel(Level.toLevel("TRACE"));
+            final ch.qos.logback.classic.Logger azbbLogger = (ch.qos.logback.classic.Logger) LoggerFactory.getLogger(AzureBlobStorageBuilder.class);
+            azbbLogger.setLevel(Level.toLevel("TRACE"));
+            final ch.qos.logback.classic.Logger azbLogger = (ch.qos.logback.classic.Logger) LoggerFactory.getLogger(AzureBlobStorage.class);
+            azbLogger.setLevel(Level.toLevel("TRACE"));
+            final ch.qos.logback.classic.Logger osLogger = (ch.qos.logback.classic.Logger) LoggerFactory.getLogger(S3ObjectStorageBuilder.class);
+            osLogger.setLevel(Level.toLevel("TRACE"));
+            final ch.qos.logback.classic.Logger osbLogger = (ch.qos.logback.classic.Logger) LoggerFactory.getLogger(S3ObjectStorage.class);
+            osbLogger.setLevel(Level.toLevel("TRACE"));
         }
 
         logger.trace("Checking for a command");
@@ -100,30 +103,6 @@ public class App {
                 }
                 break;
         }
-
-
-        logger.trace("Checking for config.properties file");
-        File configFile = new File(credentials);
-        if (configFile.exists()) {
-            Configurations configs = new Configurations();
-            try {
-                Configuration config = configs.properties(configFile);
-                if (config.containsKey("log.level") && !verbose) {
-                    final ch.qos.logback.classic.Logger meLogger = (ch.qos.logback.classic.Logger) LoggerFactory.getLogger("MSGEVENT");
-                    meLogger.setLevel(Level.toLevel(config.getString("log.level")));
-                    final ch.qos.logback.classic.Logger appLogger = (ch.qos.logback.classic.Logger) LoggerFactory.getLogger(App.class);
-                    appLogger.setLevel(Level.toLevel(config.getString("log.level")));
-                    final ch.qos.logback.classic.Logger osLogger = (ch.qos.logback.classic.Logger) LoggerFactory.getLogger(ObjectStorageV2.class);
-                    osLogger.setLevel(Level.toLevel(config.getString("log.level")));
-                    final ch.qos.logback.classic.Logger arcLogger = (ch.qos.logback.classic.Logger) LoggerFactory.getLogger(Archiver.class);
-                    arcLogger.setLevel(Level.toLevel(config.getString("log.level")));
-                    final ch.qos.logback.classic.Logger seLogger = (ch.qos.logback.classic.Logger) LoggerFactory.getLogger(StorageEngine.class);
-                    seLogger.setLevel(Level.toLevel(config.getString("log.level")));
-                }
-            } catch (ConfigurationException e) {
-                logger.error("Error with your config.properties file.");
-            }
-        }
         logger.trace("Building StorageEngine instance");
         StorageEngine storageEngine;
         try {
@@ -133,50 +112,33 @@ public class App {
             return;
         }
         logger.trace("Building storage task");
-        Gson gson = new Gson();
         Map<String, String> storageTaskJSON = new HashMap<>();
         storageTaskJSON.put("id", "cli-task-id");
         storageTaskJSON.put("name", "cli-task-name");
         storageTaskJSON.put("type", "storage");
         storageTaskJSON.put("action", command);
-        StorageTask storageTask;
         logger.trace("JSON: {}", storageTaskJSON);
-        boolean success = false;
         try {
             switch (command) {
                 case "list":
-                    storageTaskJSON.put("remote_path", parameters.get(0));
-                    success = storageEngine.runStorageJob(new StorageTask(storageTaskJSON));
+                    storageTaskJSON.put("source_path", parameters.getFirst());
                     break;
                 case "upload":
-                    storageTaskJSON.put("local_path", parameters.get(0));
-                    storageTaskJSON.put("remote_path", parameters.get(1));
-                    Path localFile = Paths.get(parameters.get(1));
-                    if (parameters.size() == 3)
-                        storageTaskJSON.put("s3_path", String.format("%s/%s", parameters.get(2), localFile.getFileName()));
-                    else
-                        storageTaskJSON.put("s3_path", localFile.getFileName().toString());
-                    success = storageEngine.runStorageJob(new StorageTask(storageTaskJSON));
-                    break;
                 case "download":
-                    storageTaskJSON.put("s3_bucket", parameters.get(0));
-                    storageTaskJSON.put("s3_path", parameters.get(1));
-                    storageTaskJSON.put("local_path", parameters.get(2));
-                    String storageTaskJSONStr = gson.toJson(storageTaskJSON);
-                    System.out.println(storageTaskJSONStr);
-                    storageTask = new StorageTask(storageTaskJSONStr);
-                    System.out.println(storageTask);
-                    success = storageEngine.runStorageJob(storageTask);
+                case "copy":
+                    storageTaskJSON.put("source_path", parameters.get(0));
+                    storageTaskJSON.put("destination_path", parameters.get(1));
                     break;
                 default:
                     break;
             }
-            if (success)
+            StorageTaskResult storageTaskResult = storageEngine.runStorageJob(new StorageTask(storageTaskJSON));
+            if (storageTaskResult.getSuccess())
                 simpleLogger.info("\nSuccessfully completed storage job");
             else
                 simpleLogger.error("\nFailed to complete storage job. Please rerun using -v for more information.");
-        } catch (ScriptException e) {
-            System.err.println(e.getMessage());
+        } catch (ExecutionException | ScriptException e) {
+            simpleLogger.error(e.getMessage());
         }
     }
 }
